Revision history for Perl extension AnyEvent.

4.161 Fri Jul  4 14:24:48 CEST 2008
        - fixed the t/handle/02_write.t, it read after write, with the
          assumption that all data could be written before read
          (reported by Jim Razmus).

4.160 Thu Jul  3 04:02:21 CEST 2008
	- re-registering signal watchers after unregistering one did
          not work if a backend falls back on AnyEvent's default
          implementation (also affected child watchers).
	- new AnyEvent::Handle options: autocork and no_delay.

4.152 Sun Jun 22 14:15:44 CEST 2008
	- allow for 32-bit perls that implement shifts differently
          on different architectures in parse_ipv4 (reported and
          analysed by Keiichi DAIBA).

4.151 Fri Jun  6 17:34:24 CEST 2008
	- make sure specifying _only_ on_read and never pushing reads
          works.

4.15 Fri Jun  6 13:00:46 CEST 2008
	- the pure perl backend would keep some watchers alive when more than
          one watcher was registered for the same fd.
	- new "packstring" and "storable" read and write types
          for AnyEvent::Handle.
        - allow on_eof handler to be called after on_error with EPIPE returns.
        - do not immediately call on_read callback in handle constructor.

4.14 Thu Jun  5 20:29:31 CEST 2008
        - Fixed a bug in DNS SRV priority sorting.
        - AnyEvent::Util::guard now reports runtime errors while
          executing the guard block as warnings.
        - handle 0-byte-reads just before EOF correctly in AnyEvent::Handle.

4.13 Thu Jun  5 00:47:59 CEST 2008
	- AnyEvent::DNS only followed cname chains with length 2,
          contrary to documentation. bumped it up to 10, thanks to
          microsoft, the current broken-dns-config-king.
        - AnyEvent::DNS didn't check for socket return status
          but instead relied on perl not creating filehandles in that
          case - too bad it gives you a bogus file handle (reported
          and analysed by Vladimir Timofeev).