@@ -24,7 +24,7 @@ use strict;
 
 use AnyEvent ();
 
-use Event ();
+use Event qw(time); # we have to important something to make Event use Time::HiRes
 
 sub io {
    my ($class, %arg) = @_;
